--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "portfolio",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://zoeyz101.github.io/portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/--recursive"
+    "sass": "node-sass -w scss/ -o dist/css/--recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Zoey Zhang",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1"
   }
 }
